@@ -1400,7 +1400,7 @@ var CloudCommander, Util,
      * @pCurrent
      */
     DOM.renameCurrentFile       = function(pCurrentFile){
-        if( Util.isString(pCurrentFile) )
+        if( !DOM.isCurrentFile(pCurrentFile) )
             pCurrentFile = null;
         
         var lCurrent    = pCurrentFile || DOM.getCurrentFile(),
